Fix a sizing issue in the horizontal bar charts on Firefox.
Unlike Chrome, Firefox doesn't support `min-width: fit-content`. This
prevented the horizontal bar graphs from showing full values, if the
percentage of the bar was too small to otherwise show the enclosed text.

Switching to `min-width: max-content` fixes this across browsers.

--- a/src/css/dashboard.less
+++ b/src/css/dashboard.less
@@ -51,7 +51,7 @@ a:visited {
         margin: 5px 0;
         grid-row: auto;
         grid-column: 2;
-        min-width: fit-content;
+        min-width: max-content;
       }
 
       &__label {
